# mrql

./: .gitignore  Makefile  README.md  pyproject.toml  ruff.toml
example/: aggregation.py
examples/: aggregation.py
mrql/: __init__.py
mrql/codegen/: base.py  python.py
mrql/grammar/: mrql.lark
mrql/parser/: parser.py  transformer.py
mrql/utils/: default.py  json.py
